igw-rtb.tf
resource "aws_route_table" "igw-rtb" {
  vpc_id = aws_vpc.ecs-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.ecs-igw.id
  }

  tags = {
    Name = "igw-rtb"
  }
}

resource "aws_route_table_association" "public_subnet_assoc" {
  count = var.subnet_count
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.igw-rtb.id
}
