lb-security-group.tf
resource "aws_security_group" "lb-sg" {
  name        = "lb-sg"
  description = "lb security group"
  vpc_id      = aws_vpc.ecs-vpc.id

  ingress {
      from_port = 80
      to_port = 80
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  // outbound internet access
  egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
  }
}
